--- a/src/app/admin/accounts/add-edit.component.html
+++ b/src/app/admin/accounts/add-edit.component.html
@@ -1,4 +1,5 @@
-<h1>Update Profile</h1>
+<h1 *ngIf="isAddMode">Create Account</h1>
+<h1 *ngIf="!isAddMode">Edit Account</h1>
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="form-row">
         <div class="form-group col">
@@ -28,7 +29,9 @@
                 <div *ngIf="f.lastName.errors.required">Last Name is required</div>
             </div>
         </div>
-        <div class="form-group">
+    </div>
+    <div class="form-row">
+        <div class="form-group col-7">
             <label>Email</label>
             <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
             <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
@@ -36,35 +39,45 @@
                 <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
             </div>
         </div>
-        <h3 class="pt-3">Change Password</h3>
-        <p>Leave blank to keep the same password</p>
-        <div class="form-row">
-            <div class="form-group col">
-                <label>Password</label>
-                <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-                <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                    <div *ngIf="f.password.errors.required">Password is required</div>
-                    <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
-                </div>
+        <div class="form-group col">
+            <label>Role</label>
+            <select formControlName="role" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.role.errors }">
+                <option value=""></option>
+                <option value="Admin">Admin</option>
+                <option value="User">User</option>
+            </select>
+            <div *ngIf="submitted && f.role.errors" class="invalid-feedback">
+                <div *ngIf="f.role.errors.required">Role is required</div>
             </div>
-            <div class="form-group col">
-                <label>Confirm</label>
-                <input type="password" formControlName="confirm" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.confirm.errors }" />
-                <div *ngIf="submitted && f.confirm.errors" class="invalid-feedback">
-                    <div *ngIf="f.confirm.errors.required">Confirm is required</div>
-                    <div *ngIf="f.confirm.errors.mustMatch">Passwords must match</div>
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <button type="submit" [disabled]="loading" class"btn btn-primary">
-                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                Update
-            </button>
-            <button type="button" (click)="onDelete()" [disabled]="deleting" class"btn btn-danger">Delete<
-                <span *ngIf="deleting" class="spinner-border spinner-border-sm mr-1"></span>
-                Delete
-            </button>
         </div>
     </div>
-</form> 
+    <div *ngIf="!isAddMode">
+        <h3 class="pt-3">Change Password</h3>
+        <p>Leave blank to keep the same password</p>
+    </div>
+    <div class="form-row">
+        <div class="form-group col">
+            <label>Password</label>
+            <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-valid': submitted && f.password.errors}" />
+            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                <div *ngIf="f.password.errors.required">Password is required</div>
+                <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+            </div>
+        </div>
+        <div class="form-group col">
+            <label>Confirm password</label>
+            <input type="password" formControlName="confirmPassword" class="form-control" [ngClass]="{ 'is-valid': submitted && f.confirmPassword.errors}" />
+            <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
+                <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
+                <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match</div>
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <button [disabled]="loading" class="btn btn-primary">
+            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+            Save
+        </button>
+        <a class="btn btn-link" routerLink="../">Cancel</a>
+    </div>
+</form>
