--- a/src/styles.less
+++ b/src/styles.less
@@ -1,5 +1,5 @@
-//global styles
-a { cursor: pointer;}
+// global styles
+a { cursor: pointer; }
 
 .app-container {
     min-height: 320px;
@@ -9,7 +9,7 @@ a { cursor: pointer;}
     padding-top: 0;
     padding-bottom: 0;
     background-color: #e8e9ea;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid #ccc;
 }
 
 .btn-delete-account {
