--- a/src/app/account/layout.component.html
+++ b/src/app/account/layout.component.html
@@ -1,10 +1,8 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-8 offset-md-2">
-            <div class="card">
-                <div class="card-body">
-                    <router-outlet></router-outlet>
-                </div>
+        <div class="col-sm-8 offset-sm-2 mt-5">
+            <div class="card m-3">
+                <router-outlet></router-outlet>
             </div>
         </div>
     </div>
