--- a/src/app/account/reset-password.component.html
+++ b/src/app/account/reset-password.component.html
@@ -3,12 +3,12 @@
     <div *ngIf="tokenStatus == TokenStatus.Validating">
         Validating token...
     </div>
-    <div *ngIf="tokenStatus == TokenStatus.Valid">
+    <div *ngIf="tokenStatus == TokenStatus.Invalid">
         Token validation failed, if the token has expired you can get a new one at the <a routerLink="../forgot-password">forgot password</a> page.
     </div>
-    <form *ngIf="tokenStatus == TokenStatus.Valid" [formGroup]="form" {ngSubmit}="onSubmit()">
+    <form *ngIf="tokenStatus == TokenStatus.Valid" [formGroup]="form" (ngSubmit)="onSubmit()">
         <div class="form-group">
-            <label for="password">Password</label>
+            <label>Password</label>
             <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
             <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                 <div *ngIf="f.password.errors.required">Password is required</div>
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="confirmPassword">Confirm Password</label>
+            <label>Confirm Password</label>
             <input type="password" formControlName="confirmPassword" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
             <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
                 <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
@@ -28,7 +28,7 @@
                 <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                 Reset Password
             </button>
-            <a routerLink="/account/login" class="btn btn-link">Cancel</a>
+            <a routerLink="../login" class="btn btn-link">Cancel</a>
         </div>
     </form>
 </div>
