--- a/src/app/account/verify-email.component.html
+++ b/src/app/account/verify-email.component.html
@@ -1,10 +1,9 @@
 <h3 class="card-header">Verify Email</h3>
 <div class="card-body">
-    <div *ngIf="emailStatus == emailStatus.Validating">
-        Verifying email...
+    <div *ngIf="emailStatus == EmailStatus.Verifying">
+        Verifying...
     </div>
-</div>
-    <div *ngIf="emailStatus == emailStatus.Valid">
+    <div *ngIf="emailStatus == EmailStatus.Failed">
         Verification failed, you can also verify your account using the <a routerLink="forgot-password">forgot password</a> page.
     </div>
-<div
+</div>
