--- a/src/app/admin/accounts/add-edit.component.html
+++ b/src/app/admin/accounts/add-edit.component.html
@@ -43,8 +43,8 @@
             <label>Role</label>
             <select formControlName="role" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.role.errors }">
                 <option value=""></option>
-                <option value="Admin">Admin</option>
                 <option value="User">User</option>
+                <option value="Admin">Admin</option>
             </select>
             <div *ngIf="submitted && f.role.errors" class="invalid-feedback">
                 <div *ngIf="f.role.errors.required">Role is required</div>
@@ -58,15 +58,15 @@
     <div class="form-row">
         <div class="form-group col">
             <label>Password</label>
-            <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-valid': submitted && f.password.errors}" />
+            <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
             <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                 <div *ngIf="f.password.errors.required">Password is required</div>
                 <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
             </div>
         </div>
         <div class="form-group col">
-            <label>Confirm password</label>
-            <input type="password" formControlName="confirmPassword" class="form-control" [ngClass]="{ 'is-valid': submitted && f.confirmPassword.errors}" />
+            <label>Confirm Password</label>
+            <input type="password" formControlName="confirmPassword" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
             <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
                 <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
                 <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match</div>
@@ -78,6 +78,6 @@
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
             Save
         </button>
-        <a class="btn btn-link" routerLink="../">Cancel</a>
+        <a routerLink="/admin/accounts" class="btn btn-link">Cancel</a>
     </div>
 </form>
