--- a/src/app/admin/accounts/list.component.html
+++ b/src/app/admin/accounts/list.component.html
@@ -1,13 +1,13 @@
 <h1>Accounts</h1>
-<p>All accounts from secure (admin only) api end point</p>
+<p>All accounts from secure (admin only) api end point:</p>
 <a routerLink="add" class="btn btn-sm btn-success mb-2">Create Account</a>
 <table class="table table-striped">
     <thead>
         <tr>
-            <th style="width: 30%">Name</th>
-            <th style="width: 30%">Email</th>
-            <th style="width: 30%">Role</th>
-            <th style="width: 10%"></th>
+            <th style="width:30%">Name</th>
+            <th style="width:30%">Email</th>
+            <th style="width:30%">Role</th>
+            <th style="width:10%"></th>
         </tr>
     </thead>
     <tbody>
@@ -15,7 +15,7 @@
             <td>{{account.title}} {{account.firstName}} {{account.lastName}}</td>
             <td>{{account.email}}</td>
             <td>{{account.role}}</td>
-            <td style="white-space: nowrap;">
+            <td style="white-space: nowrap">
                 <a routerLink="edit/{{account.id}}" class="btn btn-sm btn-primary mr-1">Edit</a>
                 <button (click)="deleteAccount(account.id)" class="btn btn-sm btn-danger btn-delete-account" [disabled]="account.isDeleting">
                     <span *ngIf="account.isDeleting" class="spinner-border spinner-border-sm"></span>
