--- a/src/app/admin/overview.component.html
+++ b/src/app/admin/overview.component.html
@@ -1,6 +1,7 @@
 <div class="p-4">
     <div class="container">
-        <p>This section can only be accessed by an administrators.</p>
+        <h1>Admin</h1>
+        <p>This section can only be accessed by administrators.</p>
         <p><a routerLink="accounts">Manage Accounts</a></p>
     </div>
 </div>
