--- a/src/app/profile/update.component.html
+++ b/src/app/profile/update.component.html
@@ -28,43 +28,41 @@
                 <div *ngIf="f.lastName.errors.required">Last Name is required</div>
             </div>
         </div>
-        <div class="form-group">
-            <label>Email</label>
-            <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
-            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-                <div *ngIf="f.email.errors.required">Email is required</div>
-                <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
-            </div>
-        </div>
-        <h3 class="pt-3">Change Password</h3>
-        <p>Leave blank to keep the same password</p>
-        <div class="form-row">
-            <div class="form-group col">
-                <label>Password</label>
-                <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-                <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                    <div *ngIf="f.password.errors.required">Password is required</div>
-                    <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
-                </div>
-            </div>
-            <div class="form-group col">
-                <label>Confirm</label>
-                <input type="password" formControlName="confirm" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.confirm.errors }" />
-                <div *ngIf="submitted && f.confirm.errors" class="invalid-feedback">
-                    <div *ngIf="f.confirm.errors.required">Confirm is required</div>
-                    <div *ngIf="f.confirm.errors.mustMatch">Passwords must match</div>
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <button type="submit" [disabled]="loading" class"btn btn-primary">
-                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                Update
-            </button>
-            <button type="button" (click)="onDelete()" [disabled]="deleting" class"btn btn-danger">Delete<
-                <span *ngIf="deleting" class="spinner-border spinner-border-sm mr-1"></span>
-                Delete
-            </button>
+    </div>
+    <div class="form-group">
+        <label>Email</label>
+        <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+        <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+            <div *ngIf="f.email.errors.required">Email is required</div>
+            <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
         </div>
     </div>
-</form> 
+    <h3 class="pt-3">Change Password</h3>
+    <p>Leave blank to keep the same password</p>
+    <div class="form-row">
+        <div class="form-group col">
+            <label>Password</label>
+            <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                <div *ngIf="f.password.errors.required">Password is required</div>
+                <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+            </div>
+        </div>
+        <div class="form-group col">
+            <label>Confirm Password</label>
+            <input type="password" formControlName="confirmPassword" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
+            <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
+                <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
+                <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match</div>
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <button type="submit" [disabled]="loading" class="btn btn-primary mr-2">
+            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+            Update
+        </button> 
+        <!--Deleting DELETE BUTTON TO AVOID SELF DESTRUCT-->
+        <a routerLink="../" href="" class="btn btn-link">Cancel</a>
+    </div>
+</form>
